--- a/contact.html
+++ b/contact.html
@@ -270,7 +270,7 @@
 									<div class="footer_contact_icon">
 										<img src="images/placeholder.svg" alt="https://www.flaticon.com/authors/lucy-g">
 									</div>
-									Shah & Anchor Kutchhi Engineering College, Chembur, Mumbai - 400 088
+									Shah & Anchor Kutchhi Engineering College, Mumbai - 400 088
 								</li>
 								<li class="footer_contact_item">
 									<div class="footer_contact_icon">
