updated contact page

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 						<li class="main_nav_item"><a href="EH_MAIN.html">home</a></li>
 						<li class="main_nav_item">
 							<div class="dropdown">
-								<button class="dropbtn">streams
+								<button class="dropbtn">Streams
 									<i class="fa fa-caret-down"></i>
 								</button>
 								<div class="dropdown-content">
@@ -41,9 +41,9 @@
 								</div>
 							</div>
 						</li>
-						<li class="main_nav_item"><a href="#">about us</a></li>
-						<li class="main_nav_item"><a href="contact.html">contact us</a></li>
-						<li class="main_nav_item"><a href="EH_login1.html">login</a></li>
+						<li class="main_nav_item"><a href="#">About Us</a></li>
+						<li class="main_nav_item"><a href="contact.html">Contact Us</a></li>
+						<li class="main_nav_item"><a href="EH_login1.html">Login</a></li>
 					</ul>
 				</div>
 			</nav>
@@ -191,7 +191,7 @@
 				<div class="row">
 					<div class="col">
 						<div class="section_title text-center">
-							<h1>Subscribe to newsletter</h1>
+							<h1>Subscribe to our newsletter</h1>
 						</div>
 					</div>
 				</div>
@@ -248,7 +248,7 @@
 					<!-- Footer Column - Usefull Links -->
 
 					<div class="col-lg-3 footer_col">
-						<div class="footer_column_title">Usefull Links</div>
+						<div class="footer_column_title">Useful Links</div>
 						<div class="footer_column_content">
 							<ul>
 								<li class="footer_list_item"><a href="#">Testimonials</a></li>
