added electronics and tele-communication and modified signup page

--- a/EH_MAIN.html
+++ b/EH_MAIN.html
@@ -86,7 +86,7 @@
 									<a href="#">Electronics</a>
 								</div>
 						</div>
-					<li class="menu_item menu_mm"><a href="#">About us</a></li>
+					<li class="menu_item menu_mm"><a href="#"> know About us</a></li>
 					<li class="menu_item menu_mm"><a href="contact.html">Contact Us</a></li>
 					<li class="menu_item menu_mm"><a href="EH_login1.html">Login</a></li>
 				</ul>
