--- a/EH_signup.html
+++ b/EH_signup.html
@@ -70,7 +70,7 @@
 		</div>
 		<div class="header_side d-flex flex-row justify-content-center align-items-center">
 			<img src="images/phone-call.svg" alt="">
-			<span>+91 9819 6043 36</span>
+			<span>+91 9819 6043 66</span>
 		</div>
 
 		<!-- Hamburger -->
@@ -102,6 +102,7 @@
 									<a href="IT.html">Information Technology</a>
 									<a href="#">Computer Science</a>
 									<a href="#">Electronics</a>
+									<a href="#">Electronics & Telecommunication</a>
 								</div>
 						</div>
 					<li class="menu_item menu_mm"><a href="#">About us</a></li>
